items aligned and footer corrected

--- a/Medical Supplies/Medical Supplies2/Css/Home.css
+++ b/Medical Supplies/Medical Supplies2/Css/Home.css
@@ -90,7 +90,7 @@ html{
 
 /* section  */
 section{
-    padding:2rem 9%;
+    
 }
 section:nth-child(even){
     background: #f5f5f5;
