--- a/Medical Supplies/Medical Supplies2/Css/body_cont.css
+++ b/Medical Supplies/Medical Supplies2/Css/body_cont.css
@@ -7,6 +7,5 @@
 
 .contents
 {
-    padding: 4.2rem;
-    
+    padding:2rem 9%;
 }
